--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prettier": "prettier --write **/*.ts"
   },
   "dependencies": {
     "gzip-cli": "^1.2.0"
@@ -15,6 +16,7 @@
     "@types/jest": "^26.0.20",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
+    "prettier": "2.2.1",
     "ts-jest": "^26.5.3",
     "typescript": "^4.2.3"
   }
