Implement heap and graph

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "prettier": "prettier --write **/*.ts"
   },
   "dependencies": {
